--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <div class="alert alert-danger w-100" style="position: fixed;border: 0px;border-radius: 0px;top: 80px;text-align: center;z-index: 999;"><%= cartValidator %>!! <a href="/signup" style="color: black;text-decoration: underline;">signup</a> ??</div>
 <%} %>
 <% if (cartAdeddMessage) {%>
-    <div id="myAlert" class="alert alert-success" ><%= cartAdeddMessage %></div>
+    <div id="myAlert" class="alert alert-success" ><%= cartAdeddMessage %> view <a href="/cart" style="text-decoration: underline;color: black;">cart</a> ??</div>
 <%} %>
 
 <script>
