--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -33,6 +33,7 @@
                                     <div class="row">
                                         <div class="col-6" style="font-weight: 800;">SubTotal</div>
                                         <div class="col-6" style="font-weight: 800;text-align: end;">$<%= subTotal %></div>
+                                        <a href="/cart/checkout" class="checkoutLink">Checkout . $<%= subTotal %></a>
                                     </div>
                                 </div>
                             </div>
