--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,8 @@
   <div class="alert alert-danger w-100" style="position: fixed;border: 0px;border-radius: 0px;top: 80px;text-align: center;z-index: 999999999;"><%= cartValidator %></div>
 <%} %>
 <div class="signupPage">
-    <div class="container">
+  <div class="container">
+      <h2 class="fw-bold mb-5 text-center">Login</h2>
         <% if (loginVlidatorEmail) {%>
             <div class="alert alert-danger"><%= loginVlidatorEmail %></div>
        <% } %>
