--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,6 +5,7 @@
 <%} %>
 <div class="signupPage">
     <div class="container">
+      <h2 class="fw-bold mb-5 text-center">Signup</h2>
         <% if (signupVlidatorEmail) {%>
             <div class="alert alert-danger"><%= signupVlidatorEmail %></div>
        <% } %>
